# FTCSimulation

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/ext/freetype-gl/: distance-field.c  font-manager.c  opengl.h  texture-atlas.c  texture-atlas.h  texture-font.c  texture-font.h
app/src/androidTest/java/com/malepati/vikas/ftcsimulation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: types.h
app/src/main/cpp/application/: application.cpp  application.h
app/src/main/cpp/graphics/: common.h  error.cpp  renderer2d.cpp  renderer2d.h
app/src/main/cpp/graphics/renderers/: renderer2d.cpp  renderer2d.h
app/src/main/cpp/math/: mat4.cpp  mat4.h  mathfunc.h  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
app/src/main/cpp/system/: androidassetmanager.cpp  androidassetmanager.h  console.h  engineiostream.cpp  engineiostream.h  loadimage.cpp  loadimage.h  timer.h
app/src/main/java/com/malepati/vikas/ftcsimulation/: FTCGLRenderer.java  FTCGLSurfaceView.java  MainActivity.java
app/src/main/java/com/malepati/vikas/ftcsimulation/graphics/: Texture.java
app/src/main/java/com/malepati/vikas/ftcsimulation/graphics/renderables/: Renderable2D.java
app/src/main/java/com/malepati/vikas/ftcsimulation/graphics/renderers/: Renderer2D.java
app/src/main/java/com/malepati/vikas/ftcsimulation/math/: Vector2f.java  Vector3f.java  Vector4f.java
app/src/main/java/com/malepati/vikas/ftcsimulation/platform/android/: AndroidContext.java  AndroidRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/malepati/vikas/ftcsimulation/: ExampleUnitTest.java
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/DeprecationManager/: Deprecated.o.d  DeprecationMgr.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/FreeImage/: BitmapAccess.o.d  CacheFile.o.d  ColorLookup.o.d  Conversion.o.d  Conversion16_555.o.d  Conversion16_565.o.d  Conversion24.o.d  Conversion32.o.d  Conversion4.o.d  Conversion8.o.d  ConversionFloat.o.d  ConversionRGB16.o.d  ConversionRGBA16.o.d  ConversionRGBAF.o.d  ConversionRGBF.o.d  ConversionType.o.d  ConversionUINT16.o.d  FreeImage.o.d  FreeImageC.o.d  FreeImageIO.o.d  GetType.o.d  Halftoning.o.d  J2KHelper.o.d  LFPQuantizer.o.d  MNGHelper.o.d  MemoryIO.o.d  MultiPage.o.d  NNQuantizer.o.d  PSDParser.o.d  PixelAccess.o.d  Plugin.o.d  PluginBMP.o.d  PluginCUT.o.d  PluginDDS.o.d  PluginEXR.o.d  PluginG3.o.d  PluginGIF.o.d  PluginHDR.o.d  PluginICO.o.d  PluginIFF.o.d  (+31 more)
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/FreeImageToolkit/: BSplineRotate.o.d  Background.o.d  Channels.o.d  ClassicRotate.o.d  Colors.o.d  CopyPaste.o.d  Display.o.d  Flip.o.d  JPEGTransform.o.d  MultigridPoissonSolver.o.d  Rescale.o.d  Resize.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/LibJPEG/: jaricom.o.d  jcapimin.o.d  jcapistd.o.d  jcarith.o.d  jccoefct.o.d  jccolor.o.d  jcdctmgr.o.d  jchuff.o.d  jcinit.o.d  jcmainct.o.d  jcmarker.o.cflags.tmp  jcmarker.o.d  jcmaster.o.d  jcomapi.o.d  jcparam.o.d  jcprepct.o.d  jcsample.o.d  jctrans.o.d  jdapimin.o.d  jdapistd.o.d  jdarith.o.d  jdatadst.o.d  jdatasrc.o.d  jdcoefct.o.d  jdcolor.o.d  jddctmgr.o.d  jdhuff.o.d  jdinput.o.d  jdmainct.o.d  jdmarker.o.d  jdmaster.o.d  jdmerge.o.d  jdpostct.o.d  jdsample.o.d  jdtrans.o.d  jerror.o.d  jfdctflt.o.d  jfdctfst.o.d  jfdctint.o.d  jidctflt.o.d  (+8 more)
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/LibOpenJPEG/: bio.o.d  cio.o.d  dwt.o.d  event.o.d  function_list.o.d  image.o.d  invert.o.d  j2k.o.d  jp2.o.d  mct.o.d  mqc.o.d  openjpeg.o.d  opj_clock.o.d  pi.o.d  raw.o.d  t1.o.d  t2.o.d  tcd.o.d  tgt.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/LibPNG/: png.o.d  pngerror.o.d  pngget.o.d  pngmem.o.d  pngpread.o.d  pngread.o.d  pngrio.o.d  pngrtran.o.d  pngrutil.o.d  pngset.o.d  pngtrans.o.d  pngwio.o.d  pngwrite.o.d  pngwtran.o.d  pngwutil.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/LibTIFF4/: tif_aux.o.d  tif_close.o.d  tif_codec.o.d  tif_color.o.d  tif_compress.o.d  tif_dir.o.d  tif_dirinfo.o.d  tif_dirread.o.d  tif_dirwrite.o.d  tif_dumpmode.o.d  tif_error.o.d  tif_extension.o.d  tif_fax3.o.d  tif_fax3sm.o.d  tif_flush.o.d  tif_getimage.o.d  tif_jpeg.o.d  tif_luv.o.d  tif_lzma.o.d  tif_lzw.o.d  tif_next.o.d  tif_ojpeg.o.d  tif_open.o.d  tif_packbits.o.d  tif_pixarlog.o.d  tif_predict.o.d  tif_print.o.d  tif_read.o.d  tif_strip.o.d  tif_swab.o.d  tif_thunder.o.d  tif_tile.o.d  tif_version.o.d  tif_warning.o.d  tif_write.o.d  tif_zip.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/Metadata/: Exif.o.d  FIRational.o.d  FreeImageTag.o.d  IPTC.o.d  TagConversion.o.d  TagLib.o.cflags.tmp  TagLib.o.d  XTIFF.o.d
dependencies/FreeImage/lib/arm64-v8a/objs/FreeImage/Source/ZLib/: adler32.o.d  compress.o.d  crc32.o.d  deflate.o.d  gzclose.o.d  gzlib.o.d  gzread.o.d  gzwrite.o.d  infback.o.d  inffast.o.d  inflate.o.d  inftrees.o.d  trees.o.d  (+2 more)
dependencies/FreeImage/lib/arm64-v8a/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/armeabi-v7a/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/armeabi-v7a/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/armeabi/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/armeabi/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/mips/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/mips/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/mips64/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/mips64/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/x86/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/x86/objs/cpufeatures/: cpu-features.o.d
dependencies/FreeImage/lib/x86_64/objs/FreeImage/: archiver.list
dependencies/FreeImage/lib/x86_64/objs/cpufeatures/: cpu-features.o.d
gradle/wrapper/: gradle-wrapper.properties
(+3085 files in other folders)
